# MetaEngine

./: .gitignore  .gitmodules  BUILD-linux.sh  BUILD.txt  CMakeLists.txt  MetaEngine.cbp  MetaEngine.layout.save  MetaEngine.workspace  README.md  main-hello.cpp  main.cpp
Data/: CMakeLists.txt  Props.sqlite
Finagle/: CMakeLists.txt  Finagle.cbp
Finagle/Include/Finagle/: Coupon.hpp  Finagle.hpp  Rule.hpp
Finagle/Test/: MockComponents.hpp  MockEngine.hpp  MockInteractions.hpp  MockLibs.hpp  NodeSyncTest.hpp  TestEngineRules.cpp  TestTMS.cpp  testmain.cpp
Glue/: CMakeLists.txt  Glue.cbp  Glue.layout.save  Interaction and Referents notes.txt
Glue/Include/Glue/: Constants.hpp  CustomAnimatorTypes.hpp  Engine.hpp  GearConstraint.hpp  Glue.hpp  LinkSplitter.hpp  MeshTools.hpp  PossibleVertex.hpp  SoftBodyMeshSynchronizer.hpp  Startup.hpp  forward_declarations.hpp
Glue/Include/Glue/ADT/: variant_ptr.hpp
Glue/Include/Glue/Animators/: CustomAnimatorTypes.hpp  KinematicAnimator.hpp  LockAnimator.hpp  MotionStateAnimator.hpp  PhysicsAnimator.hpp
Glue/Include/Glue/Avatar/: Avatar.hpp  AvatarAttribute.hpp  AvatarComponent.hpp  AvatarInterfaces.hpp  Camera.hpp  Component.hpp  KeyInputs.hpp  NodeAttribute.hpp  PlayerStyle.hpp
Glue/Include/Glue/Bullet/: BodyBuilder.hpp  Bullet.hpp  BulletAttribute.hpp  BulletComponent.hpp  BulletComponentImpl.hpp  BulletInterfaces.hpp  BulletShape.hpp  Component.hpp  ConstraintBuilder.hpp  ConstraintObj.hpp  NodeAttribute.hpp  PhysicsConstraints.hpp  PhysicsShapes.hpp  ScriptedWorldManager.hpp  Sense.hpp  ShapeBuilder.hpp  ShapeOffsets.hpp
Glue/Include/Glue/Desteer/: Desteer.hpp  Steering.hpp
Glue/Include/Glue/EditorGUI/: Component.hpp  EditorGUI.hpp  EditorGUIComponent.hpp  Toolbar.hpp
Glue/Include/Glue/Factory/: LinkFactory.hpp  NodeFactory.hpp  ShapeFactory.hpp
Glue/Include/Glue/Interactions/: Interactions.hpp
Glue/Include/Glue/Irrlicht/: Assets.hpp  Camera.hpp  Component.hpp  DisplayShapes.hpp  Irrlicht.hpp  IrrlichtAttribute.hpp  IrrlichtComponent.hpp  IrrlichtInterfaces.hpp  NodeAttribute.hpp  SceneNodeBuilder.hpp  SceneNodes.hpp  ShapeBuilder.hpp
Glue/Include/Glue/LevelSystem/: LevelEditor.hpp  LevelSystem.hpp  Props.hpp  Terrain.hpp  Tile.hpp
Glue/Include/Glue/MeshTools/: LinkSplitter.hpp  MeshTools.hpp  PossibleVertex.hpp  SoftBodyMeshSynchronizer.hpp  SurfaceQuadTree.hpp
Glue/Include/Glue/Model/: Component.hpp  Domain.hpp  Graph.hpp  Graph.hpp.save  Link.hpp  (+13 more)
Glue/Source/: Engine.cpp  Glue.cpp  HillMesh.cpp  IrrlichtBulletDebugDrawer.cpp  KinematicAnimator.cpp  MeshTools.cpp  Startup.cpp  SurfaceQuadTree.cpp
Glue/Source/Animators/: KinematicAnimator.cpp  LockAnimator.cpp  PhysicsAnimator.cpp  ScriptObjAnimator.cpp
Glue/Source/Avatar/: Avatar.cpp  AvatarAttribute.cpp  AvatarComponent.cpp  Camera.cpp  Component.cpp  KeyInputs.cpp  NodeAttribute.cpp  PlayerStyle.cpp
Glue/Source/Bullet/: BodyBuilder.cpp  Bullet.cpp  BulletAttribute.cpp  BulletComponent.cpp  BulletComponentImpl.cpp  BulletShape.cpp  Component.cpp  ConstraintBuilder.cpp  ConstraintObj.cpp  NodeAttribute.cpp  PhysicsShapes.cpp  ScriptedWorldManager.cpp  Sense.cpp  ShapeBuilder.cpp  ShapeOffsets.cpp
Glue/Source/Desteer/: Desteer.cpp  Steering.cpp
Glue/Source/EditorGUI/: Component.cpp  EditorGUI.cpp  EditorGUIComponent.cpp  Toolbar.cpp
Glue/Source/Factory/: LinkFactory.cpp  NodeFactory.cpp  ShapeFactory.cpp
Glue/Source/Interactions/: Interactions.cpp
Glue/Source/Irrlicht/: Assets.cpp  Camera.cpp  Component.cpp  DisplayShapes.cpp  EditorGUIComponent.cpp  Irrlicht.cpp  IrrlichtAttribute.cpp  IrrlichtComponent.cpp  NodeAttribute.cpp  SceneNodeBuilder.cpp  SceneNodes.cpp  ShapeBuilder.cpp
Glue/Source/LevelSystem/: LevelEditor.cpp  LevelSystem.cpp  Props.cpp  Terrain.cpp  Tile.cpp
Glue/Source/MeshTools/: HillMesh.cpp  LinkSplitter.cpp  MeshTools.cpp  PossibleVertex.cpp  SoftBodyMeshSynchronizer.cpp  SurfaceQuadTree.cpp
Glue/Source/Model/: Component.cpp  Domain.cpp  Graph.cpp  GraphImpl.cpp  Interaction.cpp  Link.cpp  Model.cpp  Node.cpp  Referent.cpp  Shape.cpp  Structure.cpp  Time.cpp  TimeComponent.cpp
Glue/Source/ModelImpl/: GraphImpl.cpp
Glue/Source/SharedTypes/: FlagBits.cpp
Glue/Source/Styles/: ConstraintStyle.cpp  ConstraintStyles.cpp  GameObjStyle.cpp  GameObjStyles.cpp  GearConstraint.cpp  LinkStyle.cpp  LinkStyles.cpp  MountStyle.cpp  Styles.cpp
Glue/Source/UserInterface/: MainWindow.cpp  Menu.cpp  UserInterface.cpp  UserInterfaceRepresentation.cpp
Knife/: CMakeLists.txt  compiler.0.cpp  main.cpp
ThinPlateSpline/: CMakeLists.txt  ThinPlateSpline.cbp  ThinPlateSpline.layout.save
ThinPlateSpline/Include/ThinPlateSpline/: ludecomposition.h
ThinPlateSpline/Source/: 2d-morph.cpp  Demo.cpp
UnitTests/: BulletComponentTests.cpp  BulletMocks.hpp  CMakeLists.txt  ComponentsTests.cpp  DatabaseTests.cpp  Example.cpp  GraphTests.cpp  MockComponents.hpp  ModelMocks.hpp  NodeInteractionTests.cpp
irrlicht/: .gitignore  CMakeLists.txt  Old-CMakeLists.txt  readme.txt
irrlicht/CMake/: ExampleBuild.cmake  IrrlichtSource.cmake  IrrlichtVersion.cmake  PrintSettings.cmake  WriteSettings.cmake
irrlicht/CMake/Compiler/: CompilerGccLikeSettings.cmake  CompilerMSVCLikeSettings.cmake
irrlicht/CMake/Dependencies/: DependencyDirectX9.cmake  DependencyFontConfig.cmake  DependencyFreeType.cmake  DependencyOpenGL.cmake  DependencyX11.cmake
irrlicht/CMake/OperatingSystems/: MacOSXSettings.cmake  UnixLikeSettings.cmake  WindowsSettings.cmake
irrlicht/CMake/Options/: OptionBuildExamples.cmake  OptionBuildTools.cmake  OptionDirectX9.cmake  OptionInstallMediaFiles.cmake  OptionProfiling.cmake  OptionStaticLib.cmake  OptionX11Support.cmake
irrlicht/examples/01.HelloWorld/: CMakeLists.txt  main.cpp
irrlicht/examples/07.Collision/: main.cpp
irrlicht/include/: exampleHelper.h
irrlicht/source/Irrlicht/: CDMFLoader.h  CFileSystem.cpp  CIrrDeviceOSX.mm  CNSOGLManager.mm  COSOperator.mm  COpenGLCoreCacheHandler.h  COpenGLCoreTexture.h  Irrlicht.mm  Irrlicht14.0.vcxproj  Irrlicht15.0.vcxproj
irrlicht/tests/: orthoCam.cpp  renderTargetTexture.cpp
(+86 files in other folders)
