cmake_minimum_required(VERSION 3.12)
project(MetaEngine)

set(CMAKE_CXX_STANDARD 17)

set(CMAKE_MODULE_PATH
        ${CMAKE_MODULE_PATH}
        ${CMAKE_SOURCE_DIR}/cmake
)

include(UseBoost)
include(UseBullet)
include(UseIrrlicht)

include_directories(Finagle/Include)
include_directories(Finagle/Test)
include_directories(Glue/Include)
include_directories(ThinPlateSpline/Include)
include_directories(irrlicht/include)
include_directories(bullet3/src)
include_directories(bullet3/src/BulletDynamics/Dynamics)
include_directories(bullet3/src/LinearMath)

add_executable(MetaEngine
        Finagle/Include/Finagle/MethodCallTarget.hpp
        Finagle/Test/MockEngine.hpp
        Finagle/Test/MockInteractions.hpp
        Finagle/Test/MockLibs.hpp
        Finagle/Test/NodeSyncTest.hpp
        Finagle/Test/TestEngineRules.cpp
        Finagle/Test/TestTMS.cpp
        Glue/Include/Glue/Animators/CustomAnimatorTypes.hpp
        Glue/Include/Glue/Animators/KinematicAnimator.hpp
        Glue/Include/Glue/Animators/LockAnimator.hpp
        Glue/Include/Glue/Animators/PhysicsAnimator.hpp
        Glue/Include/Glue/Avatar/Avatar.hpp
        Glue/Include/Glue/Avatar/Camera.hpp
        Glue/Include/Glue/Avatar/Component.hpp
        Glue/Include/Glue/Avatar/KeyInputs.hpp
        Glue/Include/Glue/Avatar/NodeAttribute.hpp
        Glue/Include/Glue/Avatar/PlayerStyle.hpp
        Glue/Include/Glue/Bullet/BodyBuilder.hpp
        Glue/Include/Glue/Bullet/Bullet.hpp
        Glue/Include/Glue/Bullet/Component.hpp
        Glue/Include/Glue/Bullet/ConstraintBuilder.hpp
        Glue/Include/Glue/Bullet/ConstraintObj.hpp
        Glue/Include/Glue/Bullet/NodeAttribute.hpp
        Glue/Include/Glue/Bullet/PhysicsConstraints.hpp
        Glue/Include/Glue/Bullet/PhysicsShapes.hpp
        Glue/Include/Glue/Bullet/Sense.hpp
        Glue/Include/Glue/Bullet/ShapeBuilder.hpp
        Glue/Include/Glue/Bullet/ShapeOffsets.hpp
        Glue/Include/Glue/Desteer/Desteer.hpp
        Glue/Include/Glue/Desteer/Steering.hpp
        Glue/Include/Glue/EditorGUI/Component.hpp
        Glue/Include/Glue/EditorGUI/EditorGUI.hpp
        Glue/Include/Glue/EditorGUI/Toolbar.hpp
        Glue/Include/Glue/Interactions/Component/AvatarTime.hpp
        Glue/Include/Glue/Interactions/Component/BulletTime.hpp
        Glue/Include/Glue/Interactions/Component/ComponentInteractionModule.hpp
        Glue/Include/Glue/Interactions/Component/ComponentInteraction.hpp
        Glue/Include/Glue/Interactions/Component/DebugDrawer.hpp
        Glue/Include/Glue/Interactions/Component/IrrlichtBulletDebugDrawer.hpp
        Glue/Include/Glue/Interactions/Component/IrrlichtKeyInput.hpp
        Glue/Include/Glue/Interactions/Component/IrrlichtTime.hpp
        Glue/Include/Glue/Interactions/Component/LoadEditorGUI.hpp
        Glue/Include/Glue/Interactions/Link/BulletMouseDrag.hpp
        Glue/Include/Glue/Interactions/Link/CameraFollowObject.hpp
        Glue/Include/Glue/Interactions/Link/IrrlichtMouseDrag.hpp
        Glue/Include/Glue/Interactions/Link/Link.hpp
        Glue/Include/Glue/Interactions/Link/LinkInteraction.hpp
        Glue/Include/Glue/Interactions/Link/SelectNode.hpp
        Glue/Include/Glue/Interactions/Node/AddScriptObjAnim.hpp
        Glue/Include/Glue/Interactions/Node/IrrlichtCamera.hpp
        Glue/Include/Glue/Interactions/Node/MotionState.hpp
        Glue/Include/Glue/Interactions/Node/Node.hpp
        Glue/Include/Glue/Interactions/Node/NodeInteraction.hpp
        Glue/Include/Glue/Interactions/Node/PlayerNoPhysSleep.hpp
        Glue/Include/Glue/Interactions/Node/PlayerPhysics.hpp
        Glue/Include/Glue/Interactions/Interactions.hpp
        Glue/Include/Glue/Irrlicht/UserInterface/EventDispatch.hpp
        Glue/Include/Glue/Irrlicht/UserInterface/GuiEvents.hpp
        Glue/Include/Glue/Irrlicht/UserInterface/Keyboard.hpp
        Glue/Include/Glue/Irrlicht/UserInterface/Menu.hpp
        Glue/Include/Glue/Irrlicht/UserInterface/Mouse.hpp
        Glue/Include/Glue/Irrlicht/UserInterface/MouseDragLinkAttribute.hpp
        Glue/Include/Glue/Irrlicht/UserInterface/SceneNodeSelector.hpp
        Glue/Include/Glue/Irrlicht/UserInterface/UserInterface.hpp
        Glue/Include/Glue/Irrlicht/Assets.hpp
        Glue/Include/Glue/Irrlicht/Camera.hpp
        Glue/Include/Glue/Irrlicht/Component.hpp
        Glue/Include/Glue/Irrlicht/DisplayShapes.hpp
        Glue/Include/Glue/Irrlicht/Irrlicht.hpp
        Glue/Include/Glue/Irrlicht/NodeAttribute.hpp
        Glue/Include/Glue/Irrlicht/SceneNodeBuilder.hpp
        Glue/Include/Glue/Irrlicht/SceneNodes.hpp
        Glue/Include/Glue/Irrlicht/ShapeBuilder.hpp
        Glue/Include/Glue/LevelSystem/LevelEditor.hpp
        Glue/Include/Glue/LevelSystem/LevelSystem.hpp
        Glue/Include/Glue/LevelSystem/Props.hpp
        Glue/Include/Glue/LevelSystem/Terrain.hpp
        Glue/Include/Glue/LevelSystem/Tile.hpp
        Glue/Include/Glue/MeshTools/LinkSplitter.hpp
        Glue/Include/Glue/MeshTools/MeshTools.hpp
        Glue/Include/Glue/MeshTools/PossibleVertex.hpp
        Glue/Include/Glue/MeshTools/SoftBodyMeshSynchronizer.hpp
        Glue/Include/Glue/MeshTools/SurfaceQuadTree.hpp
        Glue/Include/Glue/Model/Domain.hpp
        Glue/Include/Glue/Model/Graph.hpp
        Glue/Include/Glue/Model/Interaction.hpp
        Glue/Include/Glue/Model/Link.hpp
        Glue/Include/Glue/Model/Model.hpp
        Glue/Include/Glue/Model/Module.hpp
        Glue/Include/Glue/Model/Node.hpp
        Glue/Include/Glue/Model/Referent.hpp
        Glue/Include/Glue/Model/Structure.hpp
        Glue/Include/Glue/Model/Time.hpp
        Glue/Include/Glue/Styles/ConstraintStyle.hpp
        Glue/Include/Glue/Styles/ConstraintStyles.hpp
        Glue/Include/Glue/Styles/GameObjStyle.hpp
        Glue/Include/Glue/Styles/GameObjStyles.hpp
        Glue/Include/Glue/Styles/GearConstraint.hpp
        Glue/Include/Glue/Styles/LinkStyle.hpp
        Glue/Include/Glue/Styles/LinkStyles.hpp
        Glue/Include/Glue/Styles/MountStyle.hpp
        Glue/Include/Glue/Styles/Styles.hpp
        Glue/Include/Glue/UserInterface/MainWindow.hpp
        Glue/Include/Glue/UserInterface/Menu.hpp
        Glue/Include/Glue/UserInterface/UserInterface.hpp
        Glue/Include/Glue/UserInterface/UserInterfaceRepresentation.hpp
        Glue/Include/Glue/Constants.hpp
        Glue/Include/Glue/Glue.hpp
        Glue/Include/Glue/Startup.hpp
        Glue/Source/Animators/KinematicAnimator.cpp
        Glue/Source/Animators/LockAnimator.cpp
        Glue/Source/Animators/PhysicsAnimator.cpp
        Glue/Source/Animators/ScriptObjAnimator.cpp
        Glue/Source/Avatar/Avatar.cpp
        Glue/Source/Avatar/Camera.cpp
        Glue/Source/Avatar/Component.cpp
        Glue/Source/Avatar/KeyInputs.cpp
        Glue/Source/Avatar/NodeAttribute.cpp
        Glue/Source/Avatar/PlayerStyle.cpp
        Glue/Source/Bullet/BodyBuilder.cpp
        Glue/Source/Bullet/Bullet.cpp
        Glue/Source/Bullet/Component.cpp
        Glue/Source/Bullet/ConstraintBuilder.cpp
        Glue/Source/Bullet/ConstraintObj.cpp
        Glue/Source/Bullet/NodeAttribute.cpp
        Glue/Source/Bullet/PhysicsShapes.cpp
        Glue/Source/Bullet/Sense.cpp
        Glue/Source/Bullet/ShapeBuilder.cpp
        Glue/Source/Bullet/ShapeOffsets.cpp
        Glue/Source/Desteer/Desteer.cpp
        Glue/Source/Desteer/Steering.cpp
        Glue/Source/EditorGUI/Component.cpp
        Glue/Source/EditorGUI/EditorGUI.cpp
        Glue/Source/EditorGUI/Toolbar.cpp
        Glue/Source/Interactions/Component/AvatarTime.cpp
        Glue/Source/Interactions/Component/BulletTime.cpp
        Glue/Source/Interactions/Component/ComponentInteractionModule.cpp
        Glue/Source/Interactions/Component/ComponentInteraction.cpp
        Glue/Source/Interactions/Component/DebugDrawer.cpp
        Glue/Source/Interactions/Component/IrrlichtBulletDebugDrawer.cpp
        Glue/Source/Interactions/Component/IrrlichtKeyInput.cpp
        Glue/Source/Interactions/Component/IrrlichtTime.cpp
        Glue/Source/Interactions/Component/LoadEditorGUI.cpp
        Glue/Source/Interactions/Link/BulletMouseDrag.cpp
        Glue/Source/Interactions/Link/CameraFollowObject.cpp
        Glue/Source/Interactions/Link/IrrlichtMouseDrag.cpp
        Glue/Source/Interactions/Link/Link.cpp
        Glue/Source/Interactions/Link/LinkInteraction.cpp
        Glue/Source/Interactions/Link/SelectNode.cpp
        Glue/Source/Interactions/Node/AddScriptObjAnim.cpp
        Glue/Source/Interactions/Node/IrrlichtCamera.cpp
        Glue/Source/Interactions/Node/MotionState.cpp
        Glue/Source/Interactions/Node/Node.cpp
        Glue/Source/Interactions/Node/NodeInteraction.cpp
        Glue/Source/Interactions/Node/PlayerNoPhysSleep.cpp
        Glue/Source/Interactions/Node/PlayerPhysics.cpp
        Glue/Source/Interactions/Interactions.cpp
        Glue/Source/Irrlicht/UserInterface/EventDispatch.cpp
        Glue/Source/Irrlicht/UserInterface/GuiEvents.cpp
        Glue/Source/Irrlicht/UserInterface/Keyboard.cpp
        Glue/Source/Irrlicht/UserInterface/Menu.cpp
        Glue/Source/Irrlicht/UserInterface/Mouse.cpp
        Glue/Source/Irrlicht/UserInterface/MouseDragLinkAttribute.cpp
        Glue/Source/Irrlicht/UserInterface/SceneNodeSelector.cpp
        Glue/Source/Irrlicht/UserInterface/UserInterface.cpp
        Glue/Source/Irrlicht/Assets.cpp
        Glue/Source/Irrlicht/Camera.cpp
        Glue/Source/Irrlicht/Component.cpp
        Glue/Source/Irrlicht/DisplayShapes.cpp
        Glue/Source/Irrlicht/Irrlicht.cpp
        Glue/Source/Irrlicht/NodeAttribute.cpp
        Glue/Source/Irrlicht/SceneNodeBuilder.cpp
        Glue/Source/Irrlicht/SceneNodes.cpp
        Glue/Source/Irrlicht/ShapeBuilder.cpp
        Glue/Source/LevelSystem/LevelEditor.cpp
        Glue/Source/LevelSystem/LevelSystem.cpp
        Glue/Source/LevelSystem/Props.cpp
        Glue/Source/LevelSystem/Terrain.cpp
        Glue/Source/LevelSystem/Tile.cpp
        Glue/Source/MeshTools/HillMesh.cpp
        Glue/Source/MeshTools/LinkSplitter.cpp
        Glue/Source/MeshTools/MeshTools.cpp
        Glue/Source/MeshTools/PossibleVertex.cpp
        Glue/Source/MeshTools/SoftBodyMeshSynchronizer.cpp
        Glue/Source/MeshTools/SurfaceQuadTree.cpp
        Glue/Source/Model/Domain.cpp
        Glue/Source/Model/Graph.cpp
        Glue/Source/Model/Interaction.cpp
        Glue/Source/Model/Link.cpp
        Glue/Source/Model/Model.cpp
        Glue/Source/Model/Node.cpp
        Glue/Source/Model/Referent.cpp
        Glue/Source/Model/Structure.cpp
        Glue/Source/Model/Time.cpp
        Glue/Source/Styles/ConstraintStyle.cpp
        Glue/Source/Styles/ConstraintStyles.cpp
        Glue/Source/Styles/GameObjStyle.cpp
        Glue/Source/Styles/GameObjStyles.cpp
        Glue/Source/Styles/GearConstraint.cpp
        Glue/Source/Styles/LinkStyle.cpp
        Glue/Source/Styles/LinkStyles.cpp
        Glue/Source/Styles/MountStyle.cpp
        Glue/Source/Styles/Styles.cpp
        Glue/Source/UserInterface/MainWindow.cpp
        Glue/Source/UserInterface/Menu.cpp
        Glue/Source/UserInterface/UserInterface.cpp
        Glue/Source/UserInterface/UserInterfaceRepresentation.cpp
        Glue/Source/Glue.cpp
        Glue/Source/Startup.cpp
        ThinPlateSpline/Include/ThinPlateSpline/ControlPoint.hpp
        ThinPlateSpline/Include/ThinPlateSpline/Demo.hpp
        ThinPlateSpline/Include/ThinPlateSpline/gauss-elim.h
        ThinPlateSpline/Include/ThinPlateSpline/linalg3d.h
        ThinPlateSpline/Include/ThinPlateSpline/ludecomposition.h
        ThinPlateSpline/Include/ThinPlateSpline/ThinPlateQuilt.hpp
        ThinPlateSpline/Include/ThinPlateSpline/ThinPlateSpline.hpp
        ThinPlateSpline/Source/2d-morph.cpp
        ThinPlateSpline/Source/ControlPoint.cpp
        ThinPlateSpline/Source/linalg3d.cpp
        ThinPlateSpline/Source/ThinPlateQuilt.cpp
        ThinPlateSpline/Source/ThinPlateSpline.cpp
        main.cpp)
